--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
             "path": "G:\\Documents\\tools\\Git\\2.46.0\\bin\\bash.exe"
         }
     },
-    "terminal.integrated.defaultProfile.windows": "Git Bash"
+    "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
