--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "java.configuration.updateBuildConfiguration": "interactive",
     "java.compile.nullAnalysis.mode": "disabled",
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
@@ -17,6 +18,5 @@
             "path": "G:\\Documents\\tools\\Git\\2.46.0\\bin\\bash.exe"
         }
     },
-    "terminal.integrated.defaultProfile.windows": "Git Bash",
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
